done with the api, now it is for the performance
